cabal-version:       2.4
name:                yieldfsm
version:             0.1
license:             BSD-2-Clause
author:              Marek Materzok <tilk@tilk.eu>
maintainer:          Marek Materzok <tilk@tilk.eu>
category:            Hardware
synopsis:            YieldFSM, a DSL for describing finite state machines in Clash

source-repository head
  type: git
  location: https://github.com/tilk/yieldfsm

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    base >= 4.14 && < 4.15,
    Cabal,
    template-haskell,
    containers >= 0.6 && < 0.7,
    megaparsec >= 9.0.0 && < 9.1,
    unordered-containers >= 0.2 && < 0.3,
    haskell-src-meta >= 0.8 && < 0.9,
    haskell-src-exts >= 1.23 && < 1.24,
    pretty >= 1.1 && < 1.2,
    mtl >= 2.2 && < 2.3,
    lens >= 4.19 && < 4.20,
    keys >= 3.12 && < 3.13,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.2.5 && < 1.6,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat


custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4,
    cabal-doctest >= 1.0.1 && <1.1

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    FSM,
    FSM.Desc,
    FSM.DescGenADT,
    FSM.FreeVars,
    FSM.Lang,
    FSM.Lang2Desc,
    FSM.LangParser,
    FSM.LangPretty,
    FSM.LangProcess
  other-modules:
    FSM.Process.PreviousInputs
    FSM.Process.MakeTailCalls
    FSM.Process.CallGraph
    FSM.Process.ReturningFuns
    FSM.Process.RefreshFunctions
    FSM.Process.RefreshVars
    FSM.Process.CutBlocks
    FSM.Process.MakeLocalVars
    FSM.Process.DeTailCall
    FSM.Process.RemoveEpsilon
    FSM.Process.LambdaLift
    FSM.Process.FoldInit
    FSM.Process.TailCallSCC
    FSM.Process.SimplifyCase
    FSM.Util.MonadRefresh
    FSM.Util.MonadUnique
  default-language: Haskell2010

-- Builds the executable 'clash', with yieldfsm project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, yieldfsm
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with yieldfsm project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, yieldfsm

-- test-suite doctests
--   import:           common-options
--   type:             exitcode-stdio-1.0
--   default-language: Haskell2010
--   main-is:          doctests.hs
--   hs-source-dirs:   tests
-- 
--   build-depends:
--     base,
--     yieldfsm,
--     process,
--     doctest >= 0.16.1 && < 0.18
-- 
test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
--  other-modules:
--    Test
  build-depends:
    yieldfsm,
    QuickCheck,
    hedgehog,
    tasty >= 1.2 && < 1.3,
    tasty-hedgehog,
    tasty-hunit,
    tasty-th

